style(event): fix focus visibility

--- a/src/styles/event.css
+++ b/src/styles/event.css
@@ -47,5 +47,5 @@
 }
 
 .event__btn {
-  @apply absolute inset-0 opacity-0;
+  @apply absolute inset-0 text-[transparent];
 }
